--- a/lesson1/gb-app/src/App.css
+++ b/lesson1/gb-app/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
   background-color: #282c34;
   min-height: 100vh;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .App-header {
@@ -19,4 +23,20 @@
 
 .App-btn {
   color: #fff;
+}
+
+.chat__area {
+  display: flex;
+  gap: 50px;
+}
+
+.chat__box {
+  display: flex;
+  flex-direction: column;
+}
+
+.box__message {
+  margin-top: 20px;
+  overflow-y: scroll;
+  max-height: 200px;
 }
