--- a/lesson1/gb-app/src/components/Form/Form.css
+++ b/lesson1/gb-app/src/components/Form/Form.css
@@ -2,28 +2,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 3px solid rgb(185, 198, 199);
+  border: 3px solid #3f51b5;
   padding: 20px;
   box-shadow: 30px -15px 11px 1px rgba(198, 204, 208, 0.6);
+  background-color: rgb(168, 166, 166);
+  width: 400px;
 }
 
-.userForm__label {
-  color: #fff;
-  font-size: 24px;
-}
-
-.forms__input {
-  margin-top: 10px;
-  padding: 10px;
-  font-size: 24px;
-  border-radius: 10px;
-  border: none;
-}
-
-.forms__btn {
-  border-radius: 10px;
-  font-size: 20px;
-  margin: 10px 0;
-  padding: 10px;
-  cursor: pointer;
+.MuiButton-root {
+  width: 100px;
 }
