--- a/lesson1/gb-app/src/components/Messages/Messages.css
+++ b/lesson1/gb-app/src/components/Messages/Messages.css
@@ -4,7 +4,7 @@
   border: 2px solid #ccc;
   box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
   padding: 10px;
-  min-width: 400px;
+  width: 400px;
   margin-top: 20px;
   color: #1d1d1d;
 }
