--- a/lesson6/src/components/Home/Home.css
+++ b/lesson6/src/components/Home/Home.css
@@ -6,3 +6,10 @@
   flex-direction: column;
   align-items: center;
 }
+
+.home__heading {
+  font-size: calc(30px + 2vmin);
+  color: white;
+  text-shadow: 0px 3px 0px #b2a98f, 0px 14px 10px rgb(0 0 0 / 15%),
+    0px 24px 2px rgb(0 0 0 / 10%), 0px 34px 30px rgb(0 0 0 / 10%);
+}
